Redpin B2b Test/force-app/main/default/objects/Account/fields/Affiliate_Sector__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Sector__c</fullName>
    <label>Affiliate Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Emigration</fullName>
            </value>
            <value>
                <fullName>Professional services</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>