Redpin B2b Test/force-app/main/default/objects/Account/fields/cdcrmCustomer_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>cdcrmCustomer_Sub_Type__c</fullName>
    <description>Prospect or Customer?</description>
    <label>Customer Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PBU</fullName>
            </value>
            <value>
                <fullName>FPS</fullName>
            </value>
            <value>
                <fullName>FPS - Non Top 500</fullName>
            </value>
            <value>
                <fullName>Real Estate Agent</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>