Redpin B2b Test/force-app/main/default/objects/Account/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>RB-4 - added for B2B project</description>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Event</fullName>
            </value>
            <value>
                <fullName>Self Sourced</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>