Redpin B2b Test/force-app/main/default/objects/Account/fields/Totally_Fully_Ramped_Revenue_Potential__c.field-meta.xml
<CustomField>
    <fullName>Totally_Fully_Ramped_Revenue_Potential__c</fullName>
    <description>RB-4 - added for B2B project</description>
    <label>Total Fully Ramped Revenue Potential</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>