Redpin B2b Test/force-app/main/default/objects/Account/recordTypes/Integrated_B2B.recordType-meta.xml
<RecordType>
    <fullName>Integrated_B2B</fullName>
    <active>true</active>
    <description>Redpin Integrated B2B</description>
    <label>Integrated B2B</label>
</RecordType>