Redpin B2b Test/force-app/main/default/objects/Account/validationRules/Customer_Type_should_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Type_should_not_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     RecordType.DeveloperName != &quot;Integrated_B2B&quot;,
    ISPICKVAL(Customer_Type__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Customer_Type__c</errorDisplayField>
    <errorMessage>Please select Customer Type</errorMessage>
</ValidationRule>