Redpin B2b Test/force-app/main/default/objects/Account/listViews/Integrated_B2B_Accounts.listView-meta.xml
<ListView>
    <fullName>Integrated_B2B_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Integrated_B2B</value>
    </filters>
    <label>Integrated B2B Accounts</label>
</ListView>